# pyzfn

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  flake.nix  justfile  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
pyzfn/: __init__.py  calc_modes.py  chunks.py  equations.py  ispec.py  ovf.py  pyzfn.py  snapshot.py  utils.py
tests/: __init__.py  conftest.py  test.mx3  test_calc_modes.py  test_chunks.py  test_equations.py  test_ispec.py  test_ovf.py  test_pyzfn.py  test_sim.h5  test_sim.mx3  test_sim.ovf  test_snapshot.py  test_utils.py
tests/test.zarr/: .zattrs  gui  log.txt
tests/test.zarr/m/: .zarray  .zattrs  0.0.0.0.0  1.0.0.0.0  10.0.0.0.0  2.0.0.0.0  4.0.0.0.0  5.0.0.0.0  6.0.0.0.0  7.0.0.0.0  8.0.0.0.0  9.0.0.0.0
tests/test_sim.out/: log.txt  m000001.ovf  m000002.ovf  m000003.ovf  m000004.ovf  m000005.ovf  stable.ovf  table.txt
