[build-system]
requires = ["setuptools~=78.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["htmlcov"]

[project]
name = "pyzfn"
version = "1.0.4"
description = "micromagnetic post processing library"
authors = [
    { name = "Mathieu Moalic", email = "matmoa@amu.edu.pl" },
    { name = "Mateusz Zelent", email = "mateusz.zelent@amu.edu.pl" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "matplotlib~=3.10",
    "numpy~=2.2",
    "zarr~=3.0.8",
    "typing_extensions~=4.13.2",
    "crc32c~=2.7.1",
    "rich~=14.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[dependency-groups]
dev = [
    "pyzfn",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
    "ty>=0.0.1a11",
]

[tool.pytest.ini_options]
addopts = "-v -p no:warnings --cov=pyzfn --cov-report=html --doctest-modules --cov-fail-under=100"
testpaths = ["tests"]

[tool.uv.sources]
pyzfn = { workspace = true }
