[project]
name = "pyzfn"
version = "1.0.4"
description = "micromagnetic post processing library"
authors = [
    { name = "Mathieu Moalic", email = "matmoa@amu.edu.pl" },
    { name = "Mateusz Zelent", email = "mateusz.zelent@amu.edu.pl" },
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "matplotlib~=3.10",
    "numpy~=2.2",
    "zarr~=3.0.8",
    "typing_extensions~=4.13.2",
    "crc32c~=2.7.1",
    "rich~=14.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[dependency-groups]
dev = [
    "pyzfn",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
    "ty>=0.0.1a11",
]

[build-system]
requires = ["setuptools~=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["htmlcov"]


[tool.pytest.ini_options]
addopts = "-v -p no:warnings --cov=pyzfn --cov-report=html --doctest-modules --cov-fail-under=100"
testpaths = ["tests"]

[tool.uv.sources]
pyzfn = { workspace = true }

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY001", # Missing copyright notice at top of file
    "D213",   # Multi-line docstring summary should start at the first line
    "D203",   # 1 blank line required before class docstring
]


[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests...
    "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
]

# This should make all of the ty rules error.
[tool.ty.rules]
division-by-zero = "error"
possibly-unresolved-reference = "error"
unused-ignore-comment = "error"
invalid-ignore-comment = "error"
possibly-unbound-attribute = "error"
possibly-unbound-implicit-call = "error"
possibly-unbound-import = "error"
redundant-cast = "error"
undefined-reveal = "error"
unknown-rule = "error"
unsupported-base = "error"
