[metadata]
name = pyzfn
version = 0.1.1
description = micromagnetic post processing library
author = Mathieu Moalic
license = GPL-3.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    pyzfn
install_requires =
    cmocean>=2.0
    ipympl>=0.9.2
    ipytree>=0.2.2
    matplotlib>=3.6.2
    numpy>=1.23.5
    psutil>=5.9.4
    tqdm>=4.64.1
    zarr>=2.13.3
    pyfftw>=0.13.0
    nptyping>=2.4.1
python_requires = >=3.8
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
pyzfn = py.typed

[flake8]
max-line-length = 160
ignore = E501, W503,E741,E203,F722,F821
